--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
                             "Spanish",
                             "Russian",
                             "Braz_Por",
-                            "Polish"
+                            "Polish",
+                            "Chinese"
                         ]
                     },
                     "default": [
