Add better localisation on hover (using types)

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="ProjectManager.fs" />
     <Compile Include="Serialize.fs" />
     <Compile Include="Git.fs" />
+    <Compile Include="LanguageServerFeatures.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
