--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
+    "icon": "./docs/cwtools logo.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/tboby/cwtools-vscode"
