--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "description": "Paradox Interactive scripting file support using CWTools",
     "author": "Dayshine",
     "license": "MIT",
-    "version": "0.7.1",
+    "version": "0.7.0",
     "preview": true,
     "publisher": "tboby",
     "qna": "https://forum.paradoxplaza.com/forum/index.php?threads/tool-cwtools-a-mod-validating-extension-for-vs-code.1066033/",
-    "icon": "docs/cwtools logo.png",
+    "icon": "docs/cwtools_logo.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/tboby/cwtools-vscode"
