Make things update when you edit loc

--- a/package.json
+++ b/package.json
@@ -59,6 +59,16 @@
                 "command": "cacheVanilla",
                 "title": "Regenerate game vanilla cache file",
                 "category": "cwtools"
+            },
+            {
+                "command": "listAllFiles",
+                "title": "Debug: list all files",
+                "category": "cwtools"
+            },
+            {
+                "command": "listAllLocFiles",
+                "title": "Debug: list all loc files",
+                "category": "cwtools"
             }
         ],
         "configuration": {
