--- a/package.json
+++ b/package.json
@@ -335,12 +335,12 @@
     "dependencies": {
         "npm": "^6.8.0",
         "simple-git": "^1.107.0",
-        "vscode": "^1.1.29",
         "vscode-languageclient": "^5.2.1"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
-        "@types/node": "^8.10.40"
+        "@types/node": "^8.10.40",
+        "vscode": "^1.1.29"
     },
     "extensionPack": [
         "tboby.paradox-syntax"
