--- a/package.json
+++ b/package.json
@@ -269,6 +269,7 @@
                     "txt",
                     "gui",
                     "gfx",
+                    "sfx",
                     "asset",
                     "cwt"
                 ],
@@ -277,6 +278,7 @@
                     "**/crusader*kings*ii/**/*.txt",
                     "**/crusader*kings*ii/**/*.gui",
                     "**/crusader*kings*ii/**/*.gfx",
+                    "**/crusader*kings*ii/**/*.sfx",
                     "**/crusader*kings*ii/**/*.asset"
                 ]
             }
