Rename to imperator

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "onLanguage:hoi4",
         "onLanguage:eu4",
         "onLanguage:ck2",
-        "onLanguage:ir"
+        "onLanguage:imperator"
     ],
     "main": "./out/client/extension",
     "files": [
@@ -190,7 +190,7 @@
                     "type": "string",
                     "description": "The location of a vanilla CK2 installation"
                 },
-                "cwtools.cache.ir": {
+                "cwtools.cache.imperator": {
                     "scope": "application",
                     "type": "string",
                     "description": "The location of a vanilla I:R installation"
@@ -289,7 +289,7 @@
                 ]
             },
             {
-                "id": "ir",
+                "id": "imperator",
                 "aliases": [
                     "",
                     "paradox",
@@ -351,7 +351,7 @@
                     "strings": true
                 }
             },
-            "[ir]": {
+            "[imperator]": {
                 "files.autoGuessEncoding": true,
                 "editor.quickSuggestions": {
                     "other": true,
