TIdy and remove stelaris cache

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="Git.fs" />
     <Compile Include="LanguageServerFeatures.fs" />
     <EmbeddedResource Include="files/**" />
+    <Compile Include="GameLoader.fs" />
     <Compile Include="Program.fs" />
     <EmbeddedResource Include="config/**" />
   </ItemGroup>
