--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
                 "command": "listAllLocFiles",
                 "title": "Debug: list all loc files",
                 "category": "cwtools"
+            },
+            {
+                "command": "debugrules",
+                "title": "Debug: list all config rules",
+                "category": "cwtools"
             }
         ],
         "configuration": {
