--- a/package.json
+++ b/package.json
@@ -309,11 +309,11 @@
                 ],
                 "configuration": "./language-configuration.json",
                 "filenamePatterns": [
-                    "**/imperator/**/*.txt",
-                    "**/imperator/**/*.gui",
-                    "**/imperator/**/*.gfx",
-                    "**/imperator/**/*.sfx",
-                    "**/imperator/**/*.asset"
+                    "**/imperator*/**/*.txt",
+                    "**/imperator*/**/*.gui",
+                    "**/imperator*/**/*.gfx",
+                    "**/imperator*/**/*.sfx",
+                    "**/imperator*/**/*.asset"
                 ]
             }
         ],
