--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
                 "command": "debugrules",
                 "title": "Debug: list all config rules",
                 "category": "cwtools"
+            },
+            {
+                "command": "pretriggerAllFiles",
+                "title": "Optimise all triggers into pretriggers",
+                "category": "cwtools"
             }
         ],
         "configuration": {
@@ -345,7 +350,7 @@
                     "**/victoria*2/**/*.sfx",
                     "**/victoria*2/**/*.asset"
                 ]
-            }            
+            }
         ],
         "snippets": [
             {
