--- a/package.json
+++ b/package.json
@@ -41,14 +41,23 @@
         "./embedded"
     ],
     "contributes": {
-            "views": {
-                "explorer": [
-                    {
-                        "id": "fileExplorer",
-                        "name": "File Explorer"
-                    }
-                ]
-            },
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "cwtools-view",
+                    "title": "cwtools",
+                    "icon": "docs/cwtools_logo.png"
+                }
+            ]
+        },
+        "views": {
+            "cwtools-view": [
+                {
+                    "id": "fileExplorer",
+                    "name": "CWTools loaded files"
+                }
+            ]
+        },
 
 
         "commands": [
@@ -90,11 +99,6 @@
             {
                 "command": "pretriggerAllFiles",
                 "title": "Optimise all triggers into pretriggers",
-                "category": "cwtools"
-            },
-            {
-                "command": "showFileView",
-                "title": "test file view",
                 "category": "cwtools"
             }
         ],
