--- a/package.json
+++ b/package.json
@@ -41,19 +41,10 @@
         "./embedded"
     ],
     "contributes": {
-        "viewsContainers": {
-            "activitybar": [
-                {
-                    "id": "cwtools-view",
-                    "title": "cwtools",
-                    "icon": "docs/cwtools_logo.png"
-                }
-            ]
-        },
         "views": {
-            "cwtools-view": [
+            "explorer": [
                 {
-                    "id": "fileExplorer",
+                    "id": "cwtools-files",
                     "name": "CWTools loaded files"
                 }
             ]
