Fix vic2 exe name and add .map

--- a/package.json
+++ b/package.json
@@ -346,7 +346,8 @@
                     "gfx",
                     "sfx",
                     "asset",
-                    "cwt"
+                    "cwt",
+                    "map"
                 ],
                 "configuration": "./language-configuration.json",
                 "filenamePatterns": [
@@ -354,7 +355,8 @@
                     "**/victoria*2/**/*.gui",
                     "**/victoria*2/**/*.gfx",
                     "**/victoria*2/**/*.sfx",
-                    "**/victoria*2/**/*.asset"
+                    "**/victoria*2/**/*.asset",
+                    "**/victoria*2/**/*.map"
                 ]
             }
         ],
