--- a/package.json
+++ b/package.json
@@ -358,6 +358,22 @@
                     "**/victoria*2/**/*.asset",
                     "**/victoria*2/**/*.map"
                 ]
+            },
+            {
+                "id": "customparadox",
+                "aliases": [
+                    "",
+                    "paradox",
+                    "pdxscript"
+                ],
+                "extensions": [
+                    "txt",
+                    "gui",
+                    "gfx",
+                    "sfx",
+                    "asset",
+                    "cwt"
+                ]
             }
         ],
         "snippets": [
@@ -408,6 +424,14 @@
                 }
             },
             "[vic2]": {
+                "files.autoGuessEncoding": true,
+                "editor.quickSuggestions": {
+                    "other": true,
+                    "comments": false,
+                    "strings": true
+                }
+            },
+            "[customparadox]": {
                 "files.autoGuessEncoding": true,
                 "editor.quickSuggestions": {
                     "other": true,
