Set better default language settings

--- a/package.json
+++ b/package.json
@@ -396,7 +396,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[hoi4]": {
                 "files.autoGuessEncoding": true,
@@ -404,7 +406,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[eu4]": {
                 "files.autoGuessEncoding": true,
@@ -412,7 +416,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[ck2]": {
                 "files.autoGuessEncoding": true,
@@ -420,7 +426,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[imperator]": {
                 "files.autoGuessEncoding": true,
@@ -428,7 +436,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[vic2]": {
                 "files.autoGuessEncoding": true,
@@ -436,7 +446,9 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
             "[customparadox]": {
                 "files.autoGuessEncoding": true,
@@ -444,10 +456,15 @@
                     "other": true,
                     "comments": false,
                     "strings": true
-                }
+                },
+                "editor.insertSpaces": false,
+                "editor.acceptSuggestionOnEnter": "off"
             },
-            "[yml]": {
-                "files.autoGuessEncoding": true
+            "[yaml]": {
+                "files.autoGuessEncoding": true,
+                "editor.insertSpaces": true,
+                "editor.autoIndent": false,
+                "editor.wordWrap": "on"
             }
         }
     },
