--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
 		"moduleResolution": "node",
 		"rootDir": "client",
 		"outDir": "out/client",
-		"lib": [ "es2016" ],
-		"sourceMap": true
+		"lib": [ "es2016", "dom" ],
+		"sourceMap": true,
+		"esModuleInterop": true
 	},
 	"exclude": [
 		"node_modules",
