--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,11 @@
 		"outDir": "out/client",
 		"lib": [ "es2016", "dom" ],
 		"sourceMap": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
 	},
+	"include": [
+		"client"
+	],
 	"exclude": [
 		"node_modules",
 		"server",
