--- a/package.json
+++ b/package.json
@@ -487,7 +487,13 @@
     },
     "dependencies": {
         "npm": "^6.11.1",
-        "vscode-languageclient": "^5.2.1"
+        "vscode-languageclient": "^5.2.1",
+        "cytoscape": "^3.9.1",
+        "dagre": "0.8.4",
+        "cytoscape-dagre": "2.2.2",
+        "cytoscape-canvas": "3.0.1",
+        "cytoscape-qtip": "2.7.1",
+        "qtip2": "3.0.3"
     },
     "devDependencies": {
         "@types/cytoscape": "^3.8.1",
