--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -1,7 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "amd",
-		"lib": ["dom"]
+		"module": "system",
+		"target": "es6",
+		"outFile": "out/client/webview/graph.js",
+		"lib": ["dom"],
 
 	},
 	"extends": "./tsconfig.json",
