--- a/package.json
+++ b/package.json
@@ -496,7 +496,6 @@
         "qtip2": "3.0.3"
     },
     "devDependencies": {
-        "@types/cytoscape": "^3.8.1",
         "@types/dagre": "^0.7.40",
         "@types/handlebars": "^4.0.37",
         "@types/jquery": "^3.3.1",
@@ -504,6 +503,11 @@
         "@types/node": "^8.10.52",
         "@types/qtip2": "^2.2.29",
         "copyfiles": "^2.1.1",
+        "rollup-plugin-commonjs": "^10.0.2",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-typescript": "^1.0.1",
+        "tslib": "^1.10.0",
+        "typescript": "^3.5.3",
         "vscode": "^1.1.36"
     },
     "extensionPack": [
