--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "system",
+		"module": "umd",
 		"target": "es6",
 		"outFile": "out/client/webview/graph.js",
 		"lib": ["dom"],
