--- a/package.json
+++ b/package.json
@@ -504,6 +504,7 @@
         "@types/qtip2": "^2.2.29",
         "copyfiles": "^2.1.1",
         "rollup-plugin-commonjs": "^10.0.2",
+        "rollup-plugin-inject": "^3.0.1",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-typescript": "^1.0.1",
         "tslib": "^1.10.0",
