add popper and tippy

--- a/package.json
+++ b/package.json
@@ -501,16 +501,16 @@
         "cytoscape-canvas": "3.0.1",
         "cytoscape-dagre": "2.2.2",
         "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
-        "cytoscape-qtip": "2.7.1",
+        "cytoscape-popper": "1.0.4",
+        "popper.js": "^1.15.0",
+        "tippy.js": "^4.3.5",
         "dagre": "0.8.4",
         "npm": "^6.11.1",
-        "qtip2": "3.0.3",
         "vscode-languageclient": "^5.2.1"
     },
     "devDependencies": {
         "@types/dagre": "^0.7.40",
         "@types/handlebars": "^4.0.37",
-        "@types/jquery": "^3.3.1",
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.52",
         "@types/qtip2": "^2.2.29",
