--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
                     "when": "cwtoolsEventFile == true && cwtoolsWebview == false",
                     "command": "eventGraph",
                     "group": "navigation"
+                },
+                {
+                    "when": "cwtoolsWebview == true",
+                    "command": "saveGraphImage",
+                    "group": "navigation"
                 }
             ]
         },
@@ -114,6 +119,12 @@
                 "command": "eventGraph",
                 "title": "Show event graph",
                 "category": "cwtools"
+            },
+            {
+                "command": "saveGraphImage",
+                "title": "Save graph as image",
+                "category": "cwtools",
+                "enablement": "cwtoolsWebview == true"
             }
         ],
         "configuration": {
@@ -505,6 +516,8 @@
         "popper.js": "^1.15.0",
         "tippy.js": "^4.3.5",
         "dagre": "0.8.4",
+        "merge-images": "1.1.0",
+        "@mapbox/blend": "2.0.1",
         "npm": "^6.11.1",
         "vscode-languageclient": "^5.2.1"
     },
@@ -514,6 +527,7 @@
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.52",
         "@types/qtip2": "^2.2.29",
+        "@types/cytoscape": "3.1.8",
         "copyfiles": "^2.1.1",
         "rollup-plugin-commonjs": "^10.0.2",
         "rollup-plugin-hypothetical": "^2.1.0",
