Working export and import from json

--- a/package.json
+++ b/package.json
@@ -126,6 +126,11 @@
                 "category": "cwtools"
             },
             {
+                "command": "graphFromJson",
+                "title": "Recreate graph from json",
+                "category": "cwtools"
+            },
+            {
                 "command": "saveGraphImage",
                 "title": "Save graph as image",
                 "category": "cwtools",
